배포 준비: Railway + Vercel 환경설정
- 백엔드: Railway 배포용 PORT 환경변수 지원 추가
- 백엔드: 프로덕션 CORS 설정 (Vercel 도메인 허용)
- 프론트엔드: API URL 환경변수화 (REACT_APP_API_URL)
- 환경변수 파일: .env.local, .env.production 추가

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
+    "start:prod": "npm run build && npm run start",
     "start:dev": "nodemon --exec ts-node src/main.ts",
     "start:debug": "nest start --debug --watch",
     "start:debug:brk": "nodemon --exec ts-node --inspect-brk=0.0.0.0:9229 src/main.ts",
