수정: public 폴더 Git 추가 및 배포 설정 완료
- .gitignore에서 public 폴더 제외 제거 (React 앱에 필수)
- frontend/public/ 폴더와 모든 에셋 파일들 추가
- index.html, 병정 이미지, 맵 배경 등 정적 파일들 포함
- Railway 백엔드 도메인 연결 완료

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-# 프로덕션환경용 백엔드 API URL (Railway에서 제공받을 URL로 나중에 업데이트)
-REACT_APP_API_URL=https://your-railway-backend-url.railway.app
+# 프로덕션환경용 백엔드 API URL
+REACT_APP_API_URL=https://clash-of-soldiers-production.up.railway.app
